# os-net-descriptor-passing

./: CMakeLists.txt
client/: client.cpp  client.h
fifo/: fifo.cpp  fifo.h
file_descriptor/: file_descriptor.cpp  file_descriptor.h
server/: server.cpp  server.h
